--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
 		"unplugin-icons": "^0.18.5",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"jimp": "^0.22.12"
+	}
 }
